// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with accessory 1`] = `
<View>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              {
                "color": "#007AFF",
              },
              {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 12,
              },
              {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
      <View
        style={
          {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": [
                  {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with accessory and onPressDetailAccessory 1`] = `
<View>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              {
                "color": "#007AFF",
              },
              {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 12,
              },
              {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
      <View
        style={
          {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": [
                  {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with left detail 1`] = `
<View>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              {
                "color": "#007AFF",
              },
              {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 12,
              },
              {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
